[gd_scene load_steps=20 format=3 uid="uid://clwuqcs44cl3l"]

[ext_resource type="Script" uid="uid://butvhv1xw41l0" path="res://Menus/background_gen.gd" id="1_lpudm"]
[ext_resource type="PackedScene" uid="uid://dn8u0s6bv084r" path="res://bg_nebula.tscn" id="2_fw4rw"]
[ext_resource type="Shader" uid="uid://dbf33bsxrsi1x" path="res://bg_stars.gdshader" id="3_boh0i"]
[ext_resource type="Script" uid="uid://drfxgegcx48j3" path="res://Menus/settings.gd" id="3_fw4rw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lpudm"]
bg_color = Color(0.0156863, 0.0313726, 0.0627451, 0.862745)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 48
corner_radius_top_right = 48
corner_radius_bottom_right = 48
corner_radius_bottom_left = 48

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_boh0i"]
bg_color = Color(0.0156863, 0.0313726, 0.0627451, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_poamj"]
bg_color = Color(0.0156863, 0.0313726, 0.0627451, 0.980392)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 48
corner_radius_bottom_left = 48

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fw4rw"]
bg_color = Color(0.0313726, 0.0627451, 0.12549, 0.627451)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 32
corner_radius_top_right = 16
corner_radius_bottom_right = 32
corner_radius_bottom_left = 16
expand_margin_left = 8.0
expand_margin_top = 8.0
expand_margin_right = 8.0
expand_margin_bottom = 8.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_p3jrs"]
render_priority = 0
shader = ExtResource("3_boh0i")
shader_parameter/bg_color = Color(0, 0, 0, 1)
shader_parameter/seed = 1.0
shader_parameter/prob = 1.0
shader_parameter/size = 100.0

[sub_resource type="SphereMesh" id="SphereMesh_at0u2"]
flip_faces = true
radius = 3500.0
height = 7000.0
radial_segments = 8
rings = 4

[sub_resource type="Gradient" id="Gradient_ulv8f"]
offsets = PackedFloat32Array(0, 0.412698, 0.702381, 0.904762, 1)
colors = PackedColorArray(0, 0, 0, 1, 0.392857, 0.392857, 0.392857, 1, 0.606249, 0.606249, 0.606249, 1, 0.75533, 0.75533, 0.75533, 1, 1, 1, 1, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_ulv8f"]
frequency = 0.075
fractal_gain = 1.5
fractal_weighted_strength = 0.5
domain_warp_amplitude = 31.81
domain_warp_frequency = -0.09
domain_warp_fractal_type = 2
domain_warp_fractal_octaves = 10
domain_warp_fractal_lacunarity = 6.53

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_11gta"]
generate_mipmaps = false
seamless = true
color_ramp = SubResource("Gradient_ulv8f")
noise = SubResource("FastNoiseLite_ulv8f")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rxlph"]
albedo_color = Color(1, 0.470588, 0, 1)
emission_enabled = true
emission = Color(1, 0.470588, 0, 1)
emission_texture = SubResource("NoiseTexture2D_11gta")

[sub_resource type="SphereMesh" id="SphereMesh_cxdly"]
material = SubResource("StandardMaterial3D_rxlph")
radius = 100.0
height = 200.0
radial_segments = 48
rings = 24

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_w5eul"]
albedo_color = Color(1, 0.470588, 0, 1)
emission_enabled = true
emission = Color(1, 0.470588, 0, 1)
emission_texture = SubResource("NoiseTexture2D_11gta")

[sub_resource type="SphereMesh" id="SphereMesh_vxn86"]
material = SubResource("StandardMaterial3D_w5eul")
radius = 100.0
height = 200.0
radial_segments = 48
rings = 24

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4fhbr"]
albedo_color = Color(1, 0.470588, 0, 1)
emission_enabled = true
emission = Color(1, 0.470588, 0, 1)
emission_texture = SubResource("NoiseTexture2D_11gta")

[sub_resource type="SphereMesh" id="SphereMesh_gn11b"]
material = SubResource("StandardMaterial3D_4fhbr")
radius = 100.0
height = 200.0
radial_segments = 48
rings = 24

[node name="Settings" type="Node3D"]
script = ExtResource("1_lpudm")
bg_nebula = ExtResource("2_fw4rw")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Settings" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_fw4rw")

[node name="Panel" type="PanelContainer" parent="CanvasLayer/Settings"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 360.0
offset_top = 230.0
offset_right = -360.0
offset_bottom = -230.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lpudm")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Settings/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Settings/Panel/MarginContainer"]
layout_mode = 2

[node name="Gameplay" type="VBoxContainer" parent="CanvasLayer/Settings/Panel/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(560, 0)
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Settings/Panel/MarginContainer/HBoxContainer/Gameplay"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "GAMEPLAY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ControlMode" type="Button" parent="CanvasLayer/Settings/Panel/MarginContainer/HBoxContainer/Gameplay"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0.74902, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
action_mode = 0
text = "CONTROL MODE: KEYBOARD/MOUSE"
flat = true
alignment = 0

[node name="JoystickMode" type="Button" parent="CanvasLayer/Settings/Panel/MarginContainer/HBoxContainer/Gameplay"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0.74902, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
action_mode = 0
text = "JOYSTICK MODE: DUAL"
flat = true
alignment = 0

[node name="Audio" type="VBoxContainer" parent="CanvasLayer/Settings/Panel/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(560, 0)
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Settings/Panel/MarginContainer/HBoxContainer/Audio"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "AUDIO"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicVolume" type="HBoxContainer" parent="CanvasLayer/Settings/Panel/MarginContainer/HBoxContainer/Audio"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_constants/separation = 40

[node name="Label" type="Label" parent="CanvasLayer/Settings/Panel/MarginContainer/HBoxContainer/Audio/MusicVolume"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "MUSIC"
vertical_alignment = 1

[node name="HSlider" type="HSlider" parent="CanvasLayer/Settings/Panel/MarginContainer/HBoxContainer/Audio/MusicVolume"]
custom_minimum_size = Vector2(360, 50)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/slider = SubResource("StyleBoxFlat_boh0i")
value = 100.0
scrollable = false

[node name="Value" type="Label" parent="CanvasLayer/Settings/Panel/MarginContainer/HBoxContainer/Audio/MusicVolume"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "100"

[node name="SFXVolume" type="HBoxContainer" parent="CanvasLayer/Settings/Panel/MarginContainer/HBoxContainer/Audio"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_constants/separation = 40

[node name="Label" type="Label" parent="CanvasLayer/Settings/Panel/MarginContainer/HBoxContainer/Audio/SFXVolume"]
custom_minimum_size = Vector2(76, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "SFX"
vertical_alignment = 1

[node name="HSlider" type="HSlider" parent="CanvasLayer/Settings/Panel/MarginContainer/HBoxContainer/Audio/SFXVolume"]
custom_minimum_size = Vector2(360, 50)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/slider = SubResource("StyleBoxFlat_boh0i")
value = 100.0
scrollable = false

[node name="Value" type="Label" parent="CanvasLayer/Settings/Panel/MarginContainer/HBoxContainer/Audio/SFXVolume"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "100"

[node name="SettingsTitle" type="Panel" parent="CanvasLayer/Settings"]
layout_mode = 0
offset_left = 400.0
offset_top = 146.0
offset_right = 800.0
offset_bottom = 236.0
theme_override_styles/panel = SubResource("StyleBoxFlat_poamj")

[node name="Label" type="Label" parent="CanvasLayer/Settings/SettingsTitle"]
layout_mode = 0
offset_left = 50.0
offset_top = 12.0
offset_right = 351.0
offset_bottom = 79.0
theme_override_colors/font_color = Color(0, 0.74902, 1, 1)
theme_override_font_sizes/font_size = 48
text = "SETTINGS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Quit" type="PanelContainer" parent="CanvasLayer/Settings"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -408.0
offset_top = -116.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_fw4rw")

[node name="Button" type="Button" parent="CanvasLayer/Settings/Quit"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0.74902, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 64
action_mode = 0
text = "BACK"
flat = true

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 50, 100)
current = true

[node name="BGStars" type="MeshInstance3D" parent="."]
material_override = SubResource("ShaderMaterial_p3jrs")
mesh = SubResource("SphereMesh_at0u2")

[node name="Background" type="Node3D" parent="."]

[node name="MainStar1" type="MeshInstance3D" parent="Background"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2000)
mesh = SubResource("SphereMesh_cxdly")

[node name="MainStar2" type="MeshInstance3D" parent="Background"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2000)
mesh = SubResource("SphereMesh_vxn86")

[node name="MainStar3" type="MeshInstance3D" parent="Background"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2000)
mesh = SubResource("SphereMesh_gn11b")

[connection signal="pressed" from="CanvasLayer/Settings/Panel/MarginContainer/HBoxContainer/Gameplay/ControlMode" to="CanvasLayer/Settings" method="_on_control_mode_pressed"]
[connection signal="pressed" from="CanvasLayer/Settings/Panel/MarginContainer/HBoxContainer/Gameplay/JoystickMode" to="CanvasLayer/Settings" method="_on_joystick_mode_pressed"]
[connection signal="pressed" from="CanvasLayer/Settings/Quit/Button" to="CanvasLayer/Settings" method="_on_back_pressed"]
